--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <body>
 <section id="navbar">
         <nav class="navbar navbar-expand-lg navbar-light ">
-                <a class="navbar-brand" href="#"><img src="img/logo1.jpg"></a>
+                <a class="navbar-brand" href="#HOME"><div class="brand"><i class="fa fa-free-code-camp"></div></i>coders<B>HUB</B></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
