--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               </div><b>
                 The purpose of this site to act as a guideline for freshers to the world of COMPUTER SCIENCE .
                 Discussions on all the hot topics of the CSWorld along with resources and study material form top  online educational sources like ED.X, HOWARD , IITBOMBAY.X, W3SCHOOLS
-                CODECHIEF , HACKEREARTH ,etc on differ branches of cs is available here.
+                CODECHIEF , HACKEREARTH ,etc on different branches of cs is available here.
                 The main aim of this website is to give a starting point and a path way to people who see their future in the IT sector .<br>
                 ----THIS WEBSITE IS CREATED USING HTML, CSS AND BOOTSTRAP----
             </b>
