--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   <i class="fa fa-cogs" ></i>
                 </div>
                   <h3>ML</h3>
-                  <p>resources jfuutuyououguguif iifyfyiughouff7y ugiuit79r78fhjgghgii uguifyifiyfyiotgugjgirugjh88tuigjg8998 9</p>
+                  <p>resources </p>
                 
               </div>
             </div>
