--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="icon">
                   <i class="fa fa-grav" ></i>
                 </div>
-                  <h3>animetions</h3>
+                  <h3>animations</h3>
                   <p>resources</p>
                 
               </div><div class="col-md-3 text-center">
